# Rice

./: .gitattributes  LICENSE  NeonLang.bnf  README.md  TBox.bnf  Tbox语法规范.md  hello.md  languages.yml  tbox-grammatical-norm-zh-cn.md  语法规范文档.md
NaxeLamp/: NaxeLamp.g4
antlr/: TBox.g4  hello.tbox  run.bat
src/: .gitignore  Makefile  main.cpp
src/front_end/: .gitignore  CMakeLists.txt  TBox.g4  TODO.md  build.gradle  generate_parser.bat  hello_world.tbox  settings.gradle
src/front_end/examples/example1/: Makefile  a.tbox  b.c
src/front_end/libs/Lib/antlr/msvc/release/: antlr4-runtime.exp  antlr4-runtime.lib
src/front_end/src/: TBox.interp  TBoxBaseVisitor.cpp  TBoxBaseVisitor.h  TBoxCodeGenerator.cpp  TBoxCodeGenerator.h  TBoxFunctionExporter.cpp  TBoxFunctionExporter.h  TBoxHeader.h  TBoxLexer.cpp  TBoxLexer.h  TBoxLexer.interp  TBoxLexer.tokens  TBoxMain.cpp  TBoxParser.cpp  TBoxParser.h  TBoxProccessCreator.cpp  TBoxProccessCreator.h  TBoxVisitor.cpp  TBoxVisitor.h  osplatformutil.h
src/front_end/src/main/java/tbox/language/frontend/: TBox.interp  TBox.tokens  TBoxBaseListener.java  TBoxBaseVisitor.java  TBoxCodeGenerator.java  TBoxFunctionExporter.java  TBoxLexer.interp  TBoxLexer.java  TBoxListener.java  TBoxMain.java  TBoxParser.java  TBoxVisitor.java
src/lexan/: DFA.cpp  DFA.h
src/util/: FileUtil.cpp  FileUtil.h  GeneralUtil.cpp  GeneralUtil.h  RegexUtil.cpp  RegexUtil.h
tbox-grammatical-norm-lang/: tbox-grammatical-norm-zh-cn.md
test/: hello.tbox
